--- a/module4 /casestudy_module4/casestudy_module4_furamaresort/src/main/resources/templates/home.html
+++ b/module4 /casestudy_module4/casestudy_module4_furamaresort/src/main/resources/templates/home.html
@@ -196,19 +196,19 @@
                             <ul id="nav" class="nav f-right">
 
 
-                                <li class="nav-item active"><a class="nav-link" href="/">Home</a></li>
+                                <li class="nav-item active"><a class="nav-link" th:href="@{resort}">Home</a></li>
 
 
-                                <li class="nav-item "><a class="nav-link" href="#">Employee</a></li>
+                                <li class="nav-item "><a class="nav-link" th:href="@{/employee}">Employee</a></li>
 
 
-                                <li class="nav-item "><a class="nav-link" href="/tin-tuc">Customer</a></li>
+                                <li class="nav-item "><a class="nav-link" th:href="@{/customer}">Customer</a></li>
 
 
                                 <li class="nav-item "><a class="nav-link" th:href="@{/resort/facility}">facility</a>
                                 </li>
 
-                                <li class="nav-item "><a class="nav-link" href="/lien-he">Contract</a></li>
+                                <li class="nav-item "><a class="nav-link" th:href="@{contract}">Contract</a></li>
 
                                 <li class="nav-item ">
                                     <a href="/collections/all" class="nav-link">
@@ -336,7 +336,7 @@
                                  src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8YQUAAAAJcEhZcwAADsQAAA7EAZUrDhsAAAANSURBVBhXYzh8+PB/AAffA0nNPuCLAAAAAElFTkSuQmCC"
                                  data-src="//bizweb.dktcdn.net/100/033/603/themes/852890/assets/service_image_1.png?1649413074140"
                                  alt="Hành trình">
-                            <h4 class="heading-service">Hành trình</h4>
+                            <h4 class="heading-service">Journeys</h4>
                         </div>
 
 
@@ -345,7 +345,7 @@
                                  src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8YQUAAAAJcEhZcwAADsQAAA7EAZUrDhsAAAANSURBVBhXYzh8+PB/AAffA0nNPuCLAAAAAElFTkSuQmCC"
                                  data-src="//bizweb.dktcdn.net/100/033/603/themes/852890/assets/service_image_2.png?1649413074140"
                                  alt="Cao cấp">
-                            <h4 class="heading-service">Cao cấp</h4>
+                            <h4 class="heading-service">High-class</h4>
                         </div>
 
 
@@ -354,7 +354,8 @@
                                  src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8YQUAAAAJcEhZcwAADsQAAA7EAZUrDhsAAAANSURBVBhXYzh8+PB/AAffA0nNPuCLAAAAAElFTkSuQmCC"
                                  data-src="//bizweb.dktcdn.net/100/033/603/themes/852890/assets/service_image_3.png?1649413074140"
                                  alt="Tuần Trăng mật">
-                            <h4 class="heading-service">Tuần Trăng mật</h4>
+                            <h4 class="heading-service">
+                                Honeymoon</h4>
                         </div>
 
 
@@ -363,7 +364,8 @@
                                  src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8YQUAAAAJcEhZcwAADsQAAA7EAZUrDhsAAAANSURBVBhXYzh8+PB/AAffA0nNPuCLAAAAAElFTkSuQmCC"
                                  data-src="//bizweb.dktcdn.net/100/033/603/themes/852890/assets/service_image_4.png?1649413074140"
                                  alt="Khám phá">
-                            <h4 class="heading-service">Khám phá</h4>
+                            <h4 class="heading-service">
+                                Discover</h4>
                         </div>
 
 
@@ -372,7 +374,7 @@
                                  src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8YQUAAAAJcEhZcwAADsQAAA7EAZUrDhsAAAANSURBVBhXYzh8+PB/AAffA0nNPuCLAAAAAElFTkSuQmCC"
                                  data-src="//bizweb.dktcdn.net/100/033/603/themes/852890/assets/service_image_5.png?1649413074140"
                                  alt="Sinh thái">
-                            <h4 class="heading-service">Sinh thái</h4>
+                            <h4 class="heading-service">Ecological</h4>
                         </div>
 
 
@@ -381,7 +383,8 @@
                                  src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8YQUAAAAJcEhZcwAADsQAAA7EAZUrDhsAAAANSURBVBhXYzh8+PB/AAffA0nNPuCLAAAAAElFTkSuQmCC"
                                  data-src="//bizweb.dktcdn.net/100/033/603/themes/852890/assets/service_image_6.png?1649413074140"
                                  alt="Đi biển">
-                            <h4 class="heading-service">Đi biển</h4>
+                            <h4 class="heading-service">
+                                Go on beach</h4>
                         </div>
 
                     </div>
