--- a/module4 /casestudy_module4/casestudy_module4_furamaresort/src/main/resources/templates/contract_list.html
+++ b/module4 /casestudy_module4/casestudy_module4_furamaresort/src/main/resources/templates/contract_list.html
@@ -6,22 +6,29 @@
     <th:block th:replace="~{common-html :: bootstrapCss}"></th:block>
 
     <style>
-        #menu {
-            height: 600px;
+        #body{
             width: 100%;
-            background: url("//bizweb.dktcdn.net/100/033/603/themes/852890/assets/slider_1.jpg?1649413074140");
+            height:100vh;
+        }
+        #menu {
+            background-repeat: no-repeat;
+            background-size: cover;
+            height: 100%;
+            width: 100%;
+            background-image: url("//bizweb.dktcdn.net/100/033/603/themes/852890/assets/slider_1.jpg?1649413074140");
 
         }
+
     </style>
 </head>
 <body>
-<div class="card text-center">
+<div id="body" class="card text-center">
 
     <div class="card-body">
         <div id="menu">
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="#">Furama</a>
+                    <a class="navbar-brand" th:href="@{resort}">Furama resort</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target
                             ="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                             aria-expanded="false" aria-label="Toggle navigation">
@@ -30,25 +37,27 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Customer</a>
+                                <a class="nav-link" th:href="@{/customer}">Customer</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Employee</a>
+                                <a class="nav-link" th:href="@{/employee}">Employee</a>
                             </li>
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                   data-bs-toggle="dropdown" aria-expanded="false">
                                     Other
                                 </a>
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <li><a class="dropdown-item" href="#">Facility</a></li>
-                                    <li><a class="dropdown-item" href="#">Contract</a></li>
-                                    <li><a class="dropdown-item" href="#">Booking</a></li>
+                                    <li><a class="dropdown-item" th:href="@{/resort/facility}">Facility</a></li>
+                                    <li><a class="dropdown-item" th:href="@{/contract}">Contract</a></li>
+                                    <li><a class="dropdown-item" th:href="@{/booking}">Booking</a></li>
                                 </ul>
                             </li>
                         </ul>
 
-                        <form class="d-flex"action="/customer/">
-                            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"name="keyword">
+                        <form class="d-flex" action="/customer">
+                            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"
+                                   name="keyword">
                             <button class="btn btn-outline-success" type="submit">Search</button>
                         </form>
                     </div>
@@ -59,134 +68,120 @@
             </div>
             <div class="container">
 
-                <table id="tableStudent"class="table table-dark table-hover" style="width: 100%">
-                    <thead>
+                <table id="tableStudent" class="table table-dark table-hover" style="width: 100%">
 
                     <tr>
-                        <td>STT</td>
-                        <td>ID</td>
+                        <td>#</td>
+                        <td>SERVICE</td>
+                        <td>CUSTOMER NAME</td>
                         <td>START DATE</td>
                         <td>END DATE</td>
                         <td>DEPOSIT</td>
-                        <td>EMPLOYEE NAME</td>
-                        <td>CUSTOMER NAME</td>
-                        <td>FACILITY NAME</td>
-                        <td>EDIT</td>
-                        <td>DELETE</td>
+                        <td>TOTAL MONEY</td>
+                        <td>ACCOMPANIED SERVICE</td>
+
 
                     </tr>
-                    </thead>
 
-                    <thead>
-                    <tr >
-                        <td >1</td>
-                        <td >1</td>
-                        <td >14/02/1995</td>
-                        <td > 14/03/1995</td>
-                        <td > 1000</td>
+                    <tr>
+                        <td>1</td>
+                        <td>1</td>
+                        <td>14/02/1995</td>
+                        <td> 14/03/1995</td>
+                        <td> 1000</td>
 
-                        <td >hoan dep trai</td>
-                        <td >phuc xau trai</td>
-                        <td >khu nghi duong</td>
+                        <td>hoan dep trai</td>
+                        <td>phuc xau trai</td>
+                        <td>khu nghi duong</td>
                         <td>
                             <!-- Button trigger modal -->
                             <button type="button" class="btn btn-success " data-bs-toggle="modal"
-                                    data-bs-target="#exampleModal">
+                                    data-bs-target="#exampleModalCreate">
                                 +
                             </button>
 
                             <!-- Modal -->
                             <div class="modal fade" id="exampleModalCreate" tabindex="-1"
-                                 aria-labelledby="exampleModalLabel"
+                                 aria-labelledby="exampleModalLabel1"
                                  aria-hidden="true">
                                 <div class="modal-dialog">
                                     <div class="modal-content">
                                         <div class="modal-header">
-                                            <h5 class="modal-title" id="exampleModalLabelCreate">Modal title</h5>
+                                            <h5 style="color: brown" class="modal-title" id="exampleModalLabel1">create
+                                                contract</h5>
                                             <button type="button" class="btn-close" data-bs-dismiss="modal"
                                                     aria-label="Close"></button>
                                         </div>
+
                                         <div class="modal-body" style="color: green">
 
-                                            <form   method="post">
-                                                <div class="form-outline mb-4">
-                                                    <input class="form-control" type="hidden"/>
-                                                </div>
+                                            <form method="post">
                                                 <div class="row">
-
                                                     <div class="col-6">
                                                         <div class="form-outline mb-4">
-                                                            <label class="form-label">Name Employee</label>
-                                                            <input  class="form-control"/>
+                                                            <label class="form-label">ngày bắt đầu</label>
+                                                            <input type="date" class="form-control"/>
                                                         </div>
 
                                                         <div class="form-outline mb-4">
-                                                            <label class="form-label">Date Of Birth</label>
-                                                            <input  class="form-control"/>
+                                                            <label class="form-label">ngày kết thúc</label>
+                                                            <input type="date" class="form-control"/>
                                                         </div>
 
                                                         <div class="form-outline mb-4">
-                                                            <label class="form-label">Gender</label>
+                                                            <label class="form-label">tiền gửi</label>
                                                             <input class="form-control"/>
                                                         </div>
 
                                                         <div class="form-outline mb-4">
-                                                            <label class="form-label">id Card</label>
-                                                            <input  class="form-control"/>
+                                                            <label class="form-label">tổng tiền</label>
+                                                            <input class="form-control"/>
                                                         </div>
-
-
-
                                                     </div>
-
-                                                    <!---------------------------->
-
                                                     <div class="col-6">
-                                                        <div class="form-outline mb-4">
-                                                            <label class="form-label">Phone Number</label>
-                                                            <input  class="form-control"/>
-                                                        </div>
+                                                        <!---------------------------->
+
 
                                                         <div class="form-outline mb-4">
-                                                            <label class="form-label">Email</label>
+                                                            <label class="form-label">khách hàng thuê dịch vụ</label>
                                                             <input class="form-control"/>
                                                         </div>
 
                                                         <div class="form-outline mb-4">
-                                                            <label class="form-label">Address</label>
-                                                            <input  class="form-control"/>
+                                                            <label class="form-label">dịch vụ</label>
+                                                            <input class="form-control"/>
                                                         </div>
 
                                                         <div class="form-outline mb-4">
-                                                            <label class="form-label">Name Customer Type</label>
-                                                            <select  class="form-select"
-                                                                     aria-label="Default select example">
-                                                                <option >
-
-                                                                </option>
-                                                            </select>
+                                                            <label class="form-label">dịch vụ đi kèm</label>
+                                                            <input class="form-control"/>
                                                         </div>
+
+                                                        <!--                                                        <div class="form-outline mb-4">-->
+                                                        <!--                                                            <label class="form-label">Name Customer Type</label>-->
+                                                        <!--                                                            <select  class="form-select"-->
+                                                        <!--                                                                     aria-label="Default select example">-->
+                                                        <!--                                                                <option >-->
+
+                                                        <!--                                                                </option>-->
+                                                        <!--                                                            </select>-->
+                                                        <!--                                                        </div>-->
 
                                                     </div>
                                                 </div>
 
-                                                <button type="submit" class="btn btn-primary btn-block bg-momo">
-                                                    save
-                                                </button>
-                                                <a th:href="@{/customer}">
-                                                    <button type="button" class="btn btn-primary btn-block bg-momo">
-                                                        Back To List
+
+                                                <div class="modal-footer">
+                                                    <button type="button" class="btn btn-secondary"
+                                                            data-bs-dismiss="modal">Close
                                                     </button>
-                                                </a>
+                                                    <a>
+                                                        <button class="btn btn-success ">save</button>
+                                                    </a>
+                                                </div>
                                             </form>
                                         </div>
-                                        <div class="modal-footer">
-                                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close
-                                            </button>
-                                            <a>
-                                                <button class="btn btn-success ">delete</button>
-                                            </a>
-                                        </div>
+
                                     </div>
                                 </div>
                             </div>
@@ -214,7 +209,8 @@
 
                                         </div>
                                         <div class="modal-footer">
-                                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close
+                                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+                                                Close
                                             </button>
                                             <a>
                                                 <button class="btn btn-success ">delete</button>
@@ -225,23 +221,20 @@
                             </div>
                         </td>
                     </tr>
-
-                    </thead>
-                    </tbody>
                 </table>
-                <!--                <div>-->
-                <!--                    <a th:if="${customerList.hasPrevious()}"-->
-                <!--                       th:href="@{/customer/(page=${customerList.number - 1} , keyword= ${keywordVal})}">-->
-                <!--                        <button>hasPrevious</button>-->
-                <!--                    </a>-->
-                <!--                    <span th:text="${customerList.number +1}"></span>-->
-                <!--                    /-->
-                <!--                    <span th:text="${customerList.totalPages}"></span>-->
-                <!--                    <a th:if="${customerList.hasNext()}"-->
-                <!--                       th:href="@{/customer/(page=${customerList.number + 1} , keyword= ${keywordVal})}">-->
-                <!--                        <button>next</button>-->
-                <!--                    </a>-->
-                <!--                </div>-->
+<!--                                <div>-->
+<!--                                    <a th:if="${customerList.hasPrevious()}"-->
+<!--                                       th:href="@{/customer/(page=${customerList.number - 1} , keyword= ${keywordVal})}">-->
+<!--                                        <button>hasPrevious</button>-->
+<!--                                    </a>-->
+<!--                                    <span th:text="${customerList.number +1}"></span>-->
+<!--                                    /-->
+<!--                                    <span th:text="${customerList.totalPages}"></span>-->
+<!--                                    <a th:if="${customerList.hasNext()}"-->
+<!--                                       th:href="@{/customer/(page=${customerList.number + 1} , keyword= ${keywordVal})}">-->
+<!--                                        <button>next</button>-->
+<!--                                    </a>-->
+<!--                                </div>-->
 
             </div>
         </div>
