--- a/module4 /casestudy_module4/casestudy_module4_furamaresort/src/main/resources/templates/customer_list.html
+++ b/module4 /casestudy_module4/casestudy_module4_furamaresort/src/main/resources/templates/customer_list.html
@@ -6,41 +6,48 @@
     <th:block th:replace="~{common-html :: bootstrapCss}"></th:block>
 
     <style>
-        #menu {
-            height: 600px;
+        #body{
             width: 100%;
-            background: url("//bizweb.dktcdn.net/100/033/603/themes/852890/assets/slider_1.jpg?1649413074140");
+            height:100vh;
+        }
+        #menu {
+            background-repeat: no-repeat;
+            background-size: cover;
+            height: 100%;
+            width: 100%;
+            background-image: url("//bizweb.dktcdn.net/100/033/603/themes/852890/assets/slider_1.jpg?1649413074140");
 
         }
+
     </style>
 </head>
 <body>
-<div class="card text-center">
+<div id="body" class="card text-center">
 
     <div class="card-body">
         <div id="menu">
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="#">Furama</a>
+                    <a class="navbar-brand" th:href="@{/resort}">Furama </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Customer</a>
+                                <a class="nav-link" th:href="@{/customer}">Customer</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Employee</a>
+                                <a class="nav-link" th:href="@{/employee}">Employee</a>
                             </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                     Other
                                 </a>
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <li><a class="dropdown-item" href="#">Facility</a></li>
-                                    <li><a class="dropdown-item" href="#">Contract</a></li>
-                                    <li><a class="dropdown-item" href="#">Booking</a></li>
+                                    <li><a class="dropdown-item" th:href="@{/resort/facility}">Facility</a></li>
+                                    <li><a class="dropdown-item" th:href="@{/contract}">Contract</a></li>
+                                    <li><a class="dropdown-item" th:href="@{booking}">Booking</a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -52,92 +59,87 @@
                     </div>
                 </div>
             </nav>
-            <div class="container-fluid text-center m-5">
+            <div class="container text-center m-5">
                 <a href="/customer/create" class="btn btn-outline-success">Create New customer</a>
             </div>
-            <div class="container-fluid text-center m-5">
-                <a href="/customer/edit" class="btn btn-outline-success">edit customer </a>
-            </div>
-            <div class="container">
+            <div  class="container">
 
-                <table id="tableStudent"class="table table-dark table-hover" style="width: 100%">
-                    <thead>
+                <div class="row">
+                    <table class="table table-dark table-striped" >
+                        <tr>
+                            <td>STT</td>
+                            <td>ID</td>
+                            <td>NAME</td>
+                            <td>DATE OF BIRTH</td>
+                            <td>GENDER</td>
+                            <td>ID CARD</td>
+                            <td>PHONE NUMBER</td>
+                            <td>EMAIL</td>
+                            <td>ADDRESS</td>
+                            <td>CUSTOMER TYPE NAME</td>
+                            <td>EDIT</td>
+                            <td>DELETE</td>
 
-                    <tr>
-                        <td>STT</td>
-                        <td>ID</td>
-                        <td>NAME</td>
-                        <td>DATE OF BIRTH</td>
-                        <td>GENDER</td>
-                        <td>ID CARD</td>
-                        <td>PHONE NUMBER</td>
-                        <td>EMAIL</td>
-                        <td>ADDRESS</td>
-                        <td>CUSTOMER TYPE NAME</td>
-                        <td>EDIT</td>
-                        <td>DELETE</td>
+                        </tr>
 
-                    </tr>
-                    </thead>
-                    <thead>
-                    <tr th:each="customer, loop :  ${customerList}">
-                        <td th:text="${loop.count}"></td>
-                        <td th:text="${customer.idCustomer}"></td>
-                        <td th:text="${customer.nameCustomer}"></td>
-                        <td th:text="${customer.dateOfBirth}"></td>
-                        <td th:text="${customer.gender}"></td>
-                        <td th:text="${customer.idCard}"></td>
-                        <td th:text="${customer.phoneNumber}"></td>
-                        <td th:text="${customer.email}"></td>
-                        <td th:text="${customer.address}"></td>
-                        <td th:text="${customer.customerType.nameCustomerType}"></td>
-                        <td><a href="customer/edit"></a></td>
-<!--                        <td><a th:href="@{/customer/{id}/edit(id=${customer.getIdCustomer()})}">-->
-<!--                            <button class="btn btn-success ">edit</button></a>-->
-<!--                        </td>-->
 
-                        <td>
-                            <!-- Button trigger modal -->
-                            <button type="button" class="btn btn-success " data-bs-toggle="modal"
-                                    th:data-bs-target=" '#exampleModal' + ${customer.idCustomer}">
-                                delete
-                            </button>
+                        <tr th:each="customer, loop :  ${customerList}">
+                            <td th:text="${loop.count}"></td>
+                            <td th:text="${customer.idCustomer}"></td>
+                            <td th:text="${customer.nameCustomer}"></td>
+                            <td th:text="${customer.dateOfBirth}"></td>
+                            <td th:if="${customer.gender==1}">nam</td>
+                            <td th:if="${customer.gender==0}">nữ</td>
+                            <td th:text="${customer.idCard}"></td>
+                            <td th:text="${customer.phoneNumber}"></td>
+                            <td th:text="${customer.email}"></td>
+                            <td th:text="${customer.address}"></td>
+                            <td th:text="${customer.customerType.nameCustomerType}"></td>
+                            <td><a th:href="@{/customer/{id}/edit(id=${customer.idCustomer})}">
+                                <button class="btn btn-success ">edit</button></a>
+                            </td>
+                            <td>
+                                <!-- Button trigger modal -->
+                                <button type="button" class="btn btn-success " data-bs-toggle="modal"
+                                        th:data-bs-target=" '#exampleModal' + ${customer.idCustomer}">
+                                    delete
+                                </button>
 
-                            <!-- Modal -->
-                            <div class="modal fade" th:id="exampleModal  + ${customer.idCustomer}" tabindex="-1"
-                                 aria-labelledby="exampleModalLabel"
-                                 aria-hidden="true">
-                                <div class="modal-dialog">
-                                    <div class="modal-content">
-                                        <div class="modal-header">
-                                            <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-                                            <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                                    aria-label="Close"></button>
-                                        </div>
-                                        <div class="modal-body" style="color: green">
-                                            bạn có muốn xóa <span th:text="${customer.customerType.nameCustomerType}"></span> với id
-                                            = <span
-                                                th:text="${customer.idCustomer}"></span> ?
-                                        </div>
-                                        <div class="modal-footer">
-                                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close
-                                            </button>
-                                            <a th:href="@{/customer/{id}/delete(id=${customer.getIdCustomer()})}">
-                                                <button class="btn btn-success ">delete</button>
-                                            </a>
+                                <!-- Modal -->
+                                <div class="modal fade" th:id="exampleModal  + ${customer.idCustomer}" tabindex="-1"
+                                     aria-labelledby="exampleModalLabel"
+                                     aria-hidden="true">
+                                    <div class="modal-dialog">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h5 style="color: brown" class="modal-title" id="exampleModalLabel">delete customer</h5>
+                                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                                        aria-label="Close"></button>
+                                            </div>
+                                            <div class="modal-body" style="color: green">
+                                                bạn có muốn xóa <span th:text="${customer.customerType.nameCustomerType}"></span> với id
+                                                = <span
+                                                    th:text="${customer.idCustomer}"></span> ?
+                                            </div>
+                                            <div class="modal-footer">
+                                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close
+                                                </button>
+                                                <a th:href="@{/customer/{id}/delete(id=${customer.getIdCustomer()})}">
+                                                    <button class="btn btn-success ">delete</button>
+                                                </a>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
-                            </div>
-                        </td>
-                    </tr>
-                    </thead>
-                    </tbody>
-                </table>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+
                 <div>
                     <a th:if="${customerList.hasPrevious()}"
                        th:href="@{/customer/(page=${customerList.number - 1} , keyword= ${keywordVal})}">
-                        <button>hasPrevious</button>
+                        <button>Previous</button>
                     </a>
                     <span th:text="${customerList.number +1}"></span>
                     /
