--- a/module4 /casestudy_module4/casestudy_module4_furamaresort/src/main/resources/templates/employee_create.html
+++ b/module4 /casestudy_module4/casestudy_module4_furamaresort/src/main/resources/templates/employee_create.html
@@ -5,10 +5,16 @@
     <title>Title</title>
     <th:block th:replace="~{common-html :: bootstrapCss}"></th:block>
     <style>
+        #body{
+            width: 100%;
+            height:100vh;
+        }
         #menu {
+            background-repeat: no-repeat;
+            background-size: cover;
             height: 100%;
             width: 100%;
-            background: url("https://images.pexels.com/photos/127160/pexels-photo-127160.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2")
+            background-image: url("https://anhdep123.com/wp-content/uploads/2020/05/h%C3%ACnh-%E1%BA%A3nh-bi%E1%BB%83n-1.jpg")
         }
 
         .form-label {
@@ -17,11 +23,11 @@
     </style>
 </head>
 <body>
-<div class="card text-center">
+<div id="body" class="card text-center">
     <div id="menu">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">Furama</a>
+                <a class="navbar-brand" th:href="@{resort}">Furama resort</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -30,10 +36,10 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Customer</a>
+                            <a class="nav-link" th:href="@{/customer}">Customer</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Employee</a>
+                            <a class="nav-link" th:href="@{/employee}">Employee</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -41,9 +47,9 @@
                                 Other
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#">Facility</a></li>
-                                <li><a class="dropdown-item" href="#">Contract</a></li>
-                                <li><a class="dropdown-item" href="#">Booking</a></li>
+                                <li><a class="dropdown-item" th:href="@{/resort/facility}">Facility</a></li>
+                                <li><a class="dropdown-item" th:href="@{/contract}">Contract</a></li>
+                                <li><a class="dropdown-item" th:href="@{/booking}">Booking</a></li>
                             </ul>
                         </li>
                     </ul>
