--- a/module4 /casestudy_module4/casestudy_module4_furamaresort/src/main/resources/templates/employee_list.html
+++ b/module4 /casestudy_module4/casestudy_module4_furamaresort/src/main/resources/templates/employee_list.html
@@ -6,22 +6,29 @@
     <th:block th:replace="~{common-html :: bootstrapCss}"></th:block>
 
     <style>
-        #menu {
-            height: 600px;
+        #body {
             width: 100%;
-            background: url("//bizweb.dktcdn.net/100/033/603/themes/852890/assets/slider_1.jpg?1649413074140");
+            height: 100vh;
+        }
+
+        #menu {
+            background-repeat: no-repeat;
+            background-size: cover;
+            height: 100%;
+            width: 100%;
+            background-image: url("//bizweb.dktcdn.net/100/033/603/themes/852890/assets/slider_1.jpg?1649413074140");
 
         }
     </style>
 </head>
 <body>
-<div class="card text-center">
+<div id="body" class="card text-center">
 
     <div class="card-body">
         <div id="menu">
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="#">Furama</a>
+                    <a class="navbar-brand" th:href="@{resort}">Furama resort</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target
                             ="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                             aria-expanded="false" aria-label="Toggle navigation">
@@ -30,131 +37,161 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Customer</a>
+                                <a class="nav-link" th:href="@{/customer}">Customer</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Employee</a>
+                                <a class="nav-link" th:href="@{/employee}">Employee</a>
                             </li>
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                   data-bs-toggle="dropdown" aria-expanded="false">
                                     Other
                                 </a>
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <li><a class="dropdown-item" href="#">Facility</a></li>
-                                    <li><a class="dropdown-item" href="#">Contract</a></li>
-                                    <li><a class="dropdown-item" href="#">Booking</a></li>
+                                    <li><a class="dropdown-item" th:href="@{/resort/facility}">Facility</a></li>
+                                    <li><a class="dropdown-item" th:href="@{contract}">Contract</a></li>
+                                    <li><a class="dropdown-item" th:href="@{booking}">Booking</a></li>
                                 </ul>
                             </li>
                         </ul>
 
-                        <form class="d-flex"action="/customer/">
-                            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"name="keyword">
+                        <form class="d-flex" action="/customer/">
+                            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"
+                                   name="keyword">
                             <button class="btn btn-outline-success" type="submit">Search</button>
                         </form>
                     </div>
                 </div>
             </nav>
-            <div class="container-fluid text-center m-5">
+            <div class="container text-center m-5">
                 <a href="/employee/create" class="btn btn-outline-success">Create New employee</a>
             </div>
             <div class="container">
+                <div class="row">
+                    <table class="table table-dark table-striped">
+                        <tr>
+                            <td>STT</td>
+                            <td>ID</td>
+                            <td>NAME</td>
+                            <td>DATE OF BIRTH</td>
+                            <td>GENDER</td>
+                            <td>ID CARD</td>
+                            <td>PHONE NUMBER</td>
+                            <td>EMAIL</td>
+                            <td>ADDRESS</td>
+                            <td>CUSTOMER TYPE NAME</td>
+                            <td>EDIT</td>
+                            <td>DELETE</td>
+                        </tr>
 
-                <table id="tableStudent"class="table table-dark table-hover" style="width: 100%">
-                    <thead>
+                        <tr>
+                            <td>1</td>
+                            <td>1</td>
+                            <td>hoan dep trai</td>
+                            <td> 14/1</td>
+                            <td>nu</td>
+                            <td>11</td>
+                            <td>0123456789</td>
+                            <td>hoandeptrai@gmail.com</td>
+                            <td>gia lai</td>
+                            <td>asas</td>
+                            <td>
+                                <!-- Button trigger modal -->
+                                <button type="button" class="btn btn-success " data-bs-toggle="modal"
+                                        th:data-bs-target=" '#exampleModal' ">
+                                    delete
+                                </button>
 
-                    <tr>
-                        <td>STT</td>
-                        <td>ID</td>
-                        <td>NAME</td>
-                        <td>DATE OF BIRTH</td>
-                        <td>GENDER</td>
-                        <td>ID CARD</td>
-                        <td>PHONE NUMBER</td>
-                        <td>EMAIL</td>
-                        <td>ADDRESS</td>
-                        <td>CUSTOMER TYPE NAME</td>
-                        <td>EDIT</td>
-                        <td>DELETE</td>
-
-                    </tr>
-                    </thead>
-
-                    <thead>
-                    <tr >
-                        <td >1</td>
-                        <td >1</td>
-                        <td >hoan dep trai</td>
-                        <td > 14/1</td>
-                        <td >nu</td>
-                        <td >11</td>
-                        <td >0123456789</td>
-                        <td >hoandeptrai@gmail.com</td>
-                        <td >gia lai</td>
-                        <td>asas</td>
-                        <td><a href="/employee/edit" >
-                            <button class="btn btn-success ">edit</button></a>
-                        </td>
-
-                        <td>
-                            <!-- Button trigger modal -->
-                            <button type="button" class="btn btn-success " data-bs-toggle="modal"
-                                   data-bs-target="#exampleModal">
-                                delete
-                            </button>
-
-                            <!-- Modal -->
-                            <div class="modal fade" id="exampleModal" tabindex="-1"
-                                 aria-labelledby="exampleModalLabel"
-                                 aria-hidden="true">
-                                <div class="modal-dialog">
-                                    <div class="modal-content">
-                                        <div class="modal-header">
-                                            <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-                                            <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                                    aria-label="Close"></button>
-                                        </div>
-                                        <div class="modal-body" style="color: green">
-
-                                        </div>
-                                        <div class="modal-footer">
-                                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close
-                                            </button>
-                                            <a>
-                                                <button class="btn btn-success ">delete</button>
-                                            </a>
+                                <!-- Modal -->
+                                <div class="modal fade" th:id="exampleModal " tabindex="-1"
+                                     aria-labelledby="exampleModalLabel"
+                                     aria-hidden="true">
+                                    <div class="modal-dialog">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h5 style="color: brown" class="modal-title" id="exampleModalLabel">delete customer</h5>
+                                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                                        aria-label="Close"></button>
+                                            </div>
+                                            <div class="modal-body" style="color: green">
+                                                bạn có muốn xóa <span ></span>
+                                                 <span ></span>  không ?
+                                            </div>
+                                            <div class="modal-footer">
+                                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close
+                                                </button>
+                                                <a th:href="@{/customer/{id}/delete(id=${customer.getIdCustomer()})}">
+                                                    <button class="btn btn-success ">delete</button>
+                                                </a>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
-                            </div>
-                        </td>
-                    </tr>
-                    </thead>
-                    </tbody>
-                </table>
-<!--                <div>-->
-<!--                    <a th:if="${customerList.hasPrevious()}"-->
-<!--                       th:href="@{/customer/(page=${customerList.number - 1} , keyword= ${keywordVal})}">-->
-<!--                        <button>hasPrevious</button>-->
-<!--                    </a>-->
-<!--                    <span th:text="${customerList.number +1}"></span>-->
-<!--                    /-->
-<!--                    <span th:text="${customerList.totalPages}"></span>-->
-<!--                    <a th:if="${customerList.hasNext()}"-->
-<!--                       th:href="@{/customer/(page=${customerList.number + 1} , keyword= ${keywordVal})}">-->
-<!--                        <button>next</button>-->
-<!--                    </a>-->
-<!--                </div>-->
+                            </td>
 
+
+                            <td>
+                                <!-- Button trigger modal -->
+                                <button type="button" class="btn btn-success " data-bs-toggle="modal"
+                                        th:data-bs-target=" '#exampleModal'">
+                                    delete
+                                </button>
+
+                                <!-- Modal -->
+                                <div class="modal fade" id="exampleModal" tabindex="-1"
+                                     aria-labelledby="exampleModalLabel"
+                                     aria-hidden="true">
+                                    <div class="modal-dialog">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h5 style="color: brown" class="modal-title" id="exampleModalLabel">delete customer</h5>
+                                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                                        aria-label="Close"></button>
+                                            </div>
+                                            <div class="modal-body" style="color: green">
+                                                bạn có muốn xóa <span th:text="${customer.customerType.nameCustomerType}"></span> với id
+                                                = <span
+                                                    th:text="${customer.idCustomer}"></span> ?
+                                            </div>
+                                            <div class="modal-footer">
+                                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close
+                                                </button>
+                                                <a th:href="@{/customer/{id}/delete(id=${customer.getIdCustomer()})}">
+                                                    <button class="btn btn-success ">delete</button>
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </td>
+
+
+                        </tr>
+                    </table>
+                    <!--                <div>-->
+                    <!--                    <a th:if="${customerList.hasPrevious()}"-->
+                    <!--                       th:href="@{/customer/(page=${customerList.number - 1} , keyword= ${keywordVal})}">-->
+                    <!--                        <button>hasPrevious</button>-->
+                    <!--                    </a>-->
+                    <!--                    <span th:text="${customerList.number +1}"></span>-->
+                    <!--                    /-->
+                    <!--                    <span th:text="${customerList.totalPages}"></span>-->
+                    <!--                    <a th:if="${customerList.hasNext()}"-->
+                    <!--                       th:href="@{/customer/(page=${customerList.number + 1} , keyword= ${keywordVal})}">-->
+                    <!--                        <button>next</button>-->
+                    <!--                    </a>-->
+                    <!--                </div>-->
+
+                </div>
             </div>
+
         </div>
 
-    </div>
 
-
-    <div class="card-footer text-muted">
-        ToNgPhUc@gmail.com
+        <div class="card-footer text-muted">
+            ToNgPhUc@gmail.com
+        </div>
     </div>
-</div>
 
 
 </body>
