--- a/module4 /casestudy_module4/casestudy_module4_furamaresort/src/main/resources/templates/facility_list.html
+++ b/module4 /casestudy_module4/casestudy_module4_furamaresort/src/main/resources/templates/facility_list.html
@@ -6,40 +6,46 @@
     <th:block th:replace="~{common-html :: bootstrapCss}"></th:block>
 
     <style>
-        #menu {
-            height: 600px;
+        #body{
             width: 100%;
-            background: url("//bizweb.dktcdn.net/100/033/603/themes/852890/assets/slider_1.jpg?1649413074140");
+            height:100vh;
+        }
+        #menu {
+            background-repeat: no-repeat;
+            background-size: cover;
+            height: 100%;
+            width: 100%;
+            background-image: url("//bizweb.dktcdn.net/100/033/603/themes/852890/assets/slider_1.jpg?1649413074140");
 
         }
     </style>
 </head>
 <body>
-<div class="card text-center">
+<div id="body" class="card text-center">
 
     <div class="card-body">
         <div id="menu">
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="#">Furama</a>
+                    <a class="navbar-brand" th:href="@{resort}">Furama resort</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Customer</a>
+                                <a class="nav-link" th:href="@{/customer}">Customer</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Employee</a>
+                                <a class="nav-link" th:href="@{/employee}">Employee</a>
                             </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                     Other
                                 </a>
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <li><a class="dropdown-item" href="#">Facility</a></li>
-                                    <li><a class="dropdown-item" href="#">Contract</a></li>
+                                    <li><a class="dropdown-item" th:href="@{/resort/facility}">Facility</a></li>
+                                    <li><a class="dropdown-item"  th:href="@{/contract}">Contract</a></li>
                                     <li><a class="dropdown-item" href="#">Booking</a></li>
                                 </ul>
                             </li>
@@ -52,12 +58,12 @@
                     </div>
                 </div>
             </nav>
-            <div class="container-fluid text-center m-5">
+            <div class="container text-center m-5">
                 <a href="/resort/create" class="btn btn-outline-success">Create New Facility</a>
             </div>
             <div class="container">
 
-                <table id="tableStudent"class="table table-dark table-hover" style="width: 100%">
+                <table class="table table-dark table-striped">
                     <thead>
                     <tr>
                         <td>STT</td>
@@ -107,7 +113,7 @@
                                 <div class="modal-dialog">
                                     <div class="modal-content">
                                         <div class="modal-header">
-                                            <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                                            <h5 style="color: brown" class="modal-title" id="exampleModalLabel">delete facility</h5>
                                             <button type="button" class="btn-close" data-bs-dismiss="modal"
                                                     aria-label="Close"></button>
                                         </div>
@@ -134,7 +140,7 @@
                 <div>
                     <a th:if="${facilityList.hasPrevious()}"
                        th:href="@{/resort/facility/(page=${facilityList.number - 1} , keyword= ${keywordVal})}">
-                        <button>hasPrevious</button>
+                        <button>Previous</button>
                     </a>
                     <span th:text="${facilityList.number +1}"></span>
                     /
