--- a/module4 /casestudy_module4/casestudy_module4_furamaresort/src/main/resources/templates/customer_create.html
+++ b/module4 /casestudy_module4/casestudy_module4_furamaresort/src/main/resources/templates/customer_create.html
@@ -131,7 +131,7 @@
                                             aria-label="Default select example">
                                         <option th:each="customerType:${customerTypeList}"
                                                 th:text="${customerType.nameCustomerType}"
-                                                th:value="${customerType.customerTypeId}">
+                                                th:value="${customerType.id}">
 
                                         </option>
                                     </select>
