--- a/module4 /casestudy_module4/casestudy_module4_furamaresort/src/main/resources/templates/employee_list.html
+++ b/module4 /casestudy_module4/casestudy_module4_furamaresort/src/main/resources/templates/employee_list.html
@@ -120,7 +120,7 @@
                                             <div class="modal-footer">
                                                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close
                                                 </button>
-                                                <a th:href="@{/customer/{id}/delete(id=${customer.getIdCustomer()})}">
+                                                <a th:href="@{/employee/{id}/delete(id=${employee.getId()})}">
                                                     <button class="btn btn-success ">delete</button>
                                                 </a>
                                             </div>
